add extra pages and roles based menu

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,10 @@
 $enable-ltr: true;
 $enable-rtl: true;
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 // Import CoreUI for React components library
 @import "@coreui/coreui/scss/coreui";
 
